# EpiNext

./: .gitignore  AGENTS.md  LICENSE.md  README.md  pyproject.toml  pytest.ini  setup_and_test.sh
.agents/logs/: copilot.jsonl
.github/workflows/: ci.yaml  ci.yml  codeql.yml  copilot-setup-steps.yml  greetings.yml  linting.yml  testing.yml
docs/: IMPLEMENTATION_PLAN.md
docs/agents/: EpiNext_Architecture_Specification.md  EpiNext_Task_Breakdown.md
src/EpiNext/core/: __init__.py  compiler.py  gpu.py  memory.py  rng.py  simulator.py
src/EpiNext/models/: __init__.py  base.py  standard.py
tests/: test_compiler.py
tests/core/: test_gpu.py  test_memory.py  test_rng.py  test_simulator.py
tests/models/: test_base_model.py  test_standard_models.py
