[project]
name = "EpiNext"
version = "0.1.0"
description = "A modern, highly extensible object-oriented framework for modeling epidemics on networks."
readme = "README.md"
requires-python = ">=3.13.0"
dependencies = [
    "hypothesis>=6.155.1",
    "mypy>=2.1.0",
    "networkx>=3.6.1",
    "numba>=0.65.1",
    "pandas>=3.0.3",
    "pytest",
    "ruff>=0.15.16",
    "scipy>=1.17.1",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
strict = true
