[project]
name = "EpiNext"
version = "0.1.0"
description = "A modern, highly extensible object-oriented framework for modeling epidemics on networks."
readme = "README.md"
requires-python = ">=3.13.0"
dependencies = [
    "numpy>=2.3.0",
    "networkx>=3.6.1",
    "numba>=0.65.1",
    "pandas>=3.0.3",
    "scipy>=1.17.1",
]

[project.optional-dependencies]
dev = [
    "hypothesis>=6.155.1",
    "mypy>=2.1.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.16",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
strict = true
files = ["src", "tests"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
